2003/12/29 16:32 (-0500) rwmcfa1

	* MakeHelper.pm: added DATE to the list of replacements, in a format
	that rpm is happy with

	* perl-Glib.spec.in: use the new DATE replacement in conjunction with
	VERSION to create the changlog on the fly, which is better.

2003/12/23 23:40 (-0500) muppetman

	* typemap: ouch, there was a typo in the T_GCHAR_ORNULL output
	typemap, resulting in unknown variable errors.

2003/12/23 00:52 (+0100) kaffeetisch

	* typemap: Add typemaps for gsize and gssize.

2003/12/18 13:54 (-0500) rwmcfa1

	* MakeHelper.pm: rpms now build in HOME/rpms dir, one change to fix
	them all.

2003/12/16 22:00 (-0500) rwmcfa1

	* GType.xs: warnings fixes, minor (non-problem) bugs

2003/12/16 13:16 (-0500) rwmcfa1

	* MakeHelper.pm: the V deps have now been put under a var 
	BLIB_MOD_EXISTS which is set to pm_to_blib now. (1 point of change if
	need be in the future)

2003/12/15 20:37 (-0500) rwmcfa1

	* MakeHelper.pm: added pure_all as a dep on a few things.

2003/12/10 15:18 (-0500) rwmcfa1

	* t/c.t: now that the register_enum|flags stuff is fixed, test it out
	more thoroughly.

2003/12/10 12:45 (-0500) muppetman

	* Subclass.pm: updated doc

	* GType.xs: fix memory corruption problem in register_enum and 
	register_flags by duping and leaking the value names.  there appears
	to be no way to clean up that memory, unfortunately.
	also moved those two xsubs up in the file to appear immediately
	after register_object in the docs, and added examples to their docs.
	move the existing register to register_object, since that's all it
	does.  created a new function named register, which acts as a 
	traffic-cop, calling the proper helper function based on the type
	from which you are attempting to derive.  this would've been easier
	to do in Perl, but then getting the doc into the right place would
	require a rather large tearup of Glib::ParseXSDoc.

	* TODO: a few of these are completed, now.

2003/12/10 12:02 (-0500) rwmcfa1
